2005-04-15  John Luke  <john.luke@gmail.com>

	* src/Parser/AST/Modifier.cs: add Unsafe to PropertysEventsMethods
	* tests/unsafe-1.cs: new test

2005-04-13  John Luke  <john.luke@gmail.com>

	* src/Parser/AST/GlobalScope/TypeDeclaration.cs: add IsStaticClass
	and IsPartial for later use, add new ctors for handling partial types
	* src/Parser/generated/cs.ATG:
	* src/Parser/generated/Parser.cs: allow partial before TypeDeclaration
	of class, interface and struct

2005-04-13  John Luke  <john.luke@gmail.com>

	* Makefile.am:
	* src/Parser/AST/GlobalScope/ExternAliasDeclaration.cs: add this
	* src/Parser/AST/IASTVisitor.cs:
	* src/Parser/AST/AbstractASTVisitor.cs:
	* src/Parser/AST/DebugASTVisitor.cs: add ExternAliasDeclaration and
	YieldStatement to the visitors
	* src/Parser/generated/cs.ATG:
	* src/Parser/generated/Parser.cs: add part of C# 2 extern alias support

2005-04-13  John Luke  <john.luke@gmail.com>

	* src/Lexer/Tokens.cs: kill, we use a generated one
	* tests/extern-alias-1.cs:
	* tests/namespace-alias-1.cs: add a couple tests

2005-03-30  John Luke  <john.luke@gmail.com>

	* src/Parser/AST/Statements/YieldStatement.cs:
	* src/Parser/generated/cs.ATG
	* src/Parser/generated/Parser.cs
	* Makefile.am: allow yield return and yield break;

2005-03-30  John Luke  <john.luke@gmail.com>

	* src/PrettyPrinter/PrettyPrintVisitor.cs:
	* src/Parser/AST/TypeLevel/PropertyGetRegion.cs:
	* src/Parser/AST/TypeLevel/PropertySetRegion.cs:
	* src/Parser/generated/cs.ATG:
	* src/Parser/generated/Parser.cs: allow Modifiers
	on property get and set

2005-03-26  John Luke  <john.luke@gmail.com>

	* src/PrettyPrinter/PrettyPrintVisitor.cs
	* src/Parser/AST/AbstractASTVisitor.cs
	* src/Parser/AST/IASTVisitor.cs: add Errors to AbstractASTVisitor
	so we can report more errors correctly 

2005-03-26  John Luke  <john.luke@gmail.com>

	* Makefile.am: clean up test and add errors and tests
	target to run both positive and negative tests.