@@ -1,6 +1,7 @@
 2005-04-15  John Luke  <john.luke@gmail.com>
 
 	* src/Parser/AST/Modifier.cs: add Unsafe to PropertysEventsMethods
+	and class, struct, interface, delegate, and field
 	* tests/unsafe-1.cs: new test
 
 2005-04-13  John Luke  <john.luke@gmail.com>
